--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 SECRET_KEY=76419fd6885a677f802fd1d2b5acd0188e23e001042b05a8
+DATABASE_URL=postgresql://postgres:jCY4zJx8xrpVQOPvqFnK@containers-us-west-130.railway.app:7776/railway
